libnone: Add upstream musl patch for CVE-2016-8859.
Related: https://twitter.com/musllibc/status/789178314845859841

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -9,6 +9,7 @@ set(MUSL_PATCHES
   musl-patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
   musl-patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
   musl-patches/0007-Partially-revert-remove-potentially-PIC-incompatible.patch
+  musl-patches/CVE-2016-8859.patch
 )
 
 set(MUSL_CFLAGS_EXTRA "")
